--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,7 @@ build: off
 
 install:
 
-  - java -jar ./artifacts/app-mbank.jar &
+  - java -jar ./artifacts/app-order.jar &
 
 build_script:
   - chmod +x gradlew
